	
	o	Rcpp modules. An Rcpp module is a collection of internal (c++)
	functions and classes that are exposed to R. Inspired from
	Boost.Python
	
	Modules are created internally using the RCPP_MODULE macro and retrieved
	in the R side with the Module function. The unit test file 
	runit.Module.R shows an example.
	
	The Rcpp-modules vignette documents the feature

0.8.0   2010-05-17

    o   All Rcpp headers have been moved to the inst/include directory,
        allowing use of 'LinkingTo: Rcpp'. But the Makevars and Makevars.win
        are still needed to link against the user library.

    o   Automatic exception forwarding has been withdrawn because of
        portability issues (as it did not work on the Windows platform).
        Exception forwarding is still possible but is now based on explicit
        code of the form:
    
          try {
            // user code
          } catch( std::exception& __ex__){ 
            forward_exception_to_r( __ex___ ) ;
          }
    
        Alternatively, the macro BEGIN_RCPP and END_RCPP can use used to enclose
        code so that it captures exceptions and forward them to R. 
    
          BEGIN_RCPP
          // user code
          END_RCPP
    
    o   new __experimental__ macros 
    
        The macros RCPP_FUNCTION_0, ..., RCPP_FUNCTION_65 to help creating C++
        functions hiding some code repetition: 
    
          RCPP_FUNCTION_2( int, foobar, int x, int y){
           return x + y ;
          }

        The first argument is the output type, the second argument is the
        name of the function, and the other arguments are arguments of the
        C++ function. Behind the scenes, the RCPP_FUNCTION_2 macro creates an
        intermediate function compatible with the .Call interface and handles
        exceptions
    
        Similarly, the macros RCPP_FUNCTION_VOID_0, ..., RCPP_FUNCTION_VOID_65 
        can be used when the C++ function to create returns void. The generated