@@ -46,7 +46,7 @@ Description: Seamless R and C++ integration
  .
  Several examples are included, and over 530 unit tests in over 240 unit test
  functions provide addtional usage examples.
-Depends: R (>= 2.10.0), methods, inline (>= 0.3.4)
+Depends: R (>= 2.10.0), methods
 Suggests: RUnit 
 SystemRequirements: GNU make
 URL: http://dirk.eddelbuettel.com/code/rcpp.html, http://romainfrancois.blog.free.fr/index.php?category/R-package/Rcpp
