@@ -1,5 +1,17 @@
 pkg <- "Rcpp"
 
+if( ! require( "inline", character.only = TRUE, quietly = TRUE ) ){
+	stop( "The inline package is required to run Rcpp unit tests" )
+}
+
+if( compareVersion( packageDescription( "inline" )[["Version"]], "0.3.4.2" ) < 0 ){
+	stop( "Rcpp unit tests need at least the version 0.3.4.2 of inline" )
+}
+
+cppfunction <- function(...){
+	cxxfunction( ..., plugin = "Rcpp" )
+}
+
 if(require("RUnit", quietly = TRUE)) {
 
     is_local <- function(){
